--- a/Example_Automatic_Github_Issue_Creation.ipynb
+++ b/Example_Automatic_Github_Issue_Creation.ipynb
@@ -24,7 +24,7 @@
     "# Authentication for user filing issue (must have read/write access to\n",
     "# repository to add issue to)\n",
     "USERNAME = 'alberduris'\n",
-    "PASSWORD = 'albertob8295'\n",
+    "PASSWORD = 'XXXX'\n",
     "\n",
     "# The repository to add this issue to\n",
     "REPO_OWNER = 'OpenMined'\n",
